# m4c-template-rust

./: .gitignore  README.md
app/: .env  Cargo.toml
app/src/: handlers.rs  main.rs
docker/: Dockerfile
sql/: init.sql
