[package]
name = "m4ce-product"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.30.0", features = ["full"] }
tower = "0.4.11"
mime = "0.3.16"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1.30"
tracing-subscriber = { version="0.3.8", features = ["env-filter"] }
anyhow = "1.0.56"
thiserror = "1.0.30"
http-body = "0.4.5"
validator = { version = "0.14.0", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenv = "0.15.0"
tower-http = { version = "0.4.3", features = ["cors"] }